--- a/Code&Or/files/css.css
+++ b/Code&Or/files/css.css
@@ -1,7 +1,7 @@
 #chargement {
-    border: 12px solid #000;
+    border: 12px solid #DDD;
     border-radius: 50%;
-    border-top: 12px solid #DDD;
+    border-top: 12px solid #000;
     width: 80px;
     height: 80px;
     animation: spin 2s linear infinite;
